--- a/FingerLock/en.lproj/Root.strings
+++ b/FingerLock/en.lproj/Root.strings
@@ -1,21 +1,21 @@
-"ENABLED" = "Enabled";
-"ADD_LOCKSCREEN_BUTTON" = "Add lockscreen button";
-"USE_BUTTON_TINT_COLOR" = "Use button tint color";
-"TINT_COLOR" = "Tint Color";
-"UNLOCK_METHOD" = "Unlock Method";
-"BUTTON_POSITION" = "Button Position";
-"LOCKSCREEN_BUTTON" = "Lockscreen Button";
-"MAIN_TWEAK_SETTINGS" = "Main Tweak Settings";
-"TAP_UNLOCK" = "Tap";
-"LONG_PRESS_UNLOCK" = "Long Press";
-"HAPTIC_FEEDBACK" = "Haptic Feedback";
-"NO_VIBRATION" = "None";
-"LOCKSCREEN_OPTIONS" = "Lockscreen Options";
-"SKIP_PASSCODE_SCREEN" = "Skip respring passcode screen";
-"PAGE_DOTS" = "Hide lockscreen page dots";
-"UNLOCK_TEXT" = "Hide lockscreen unlock text";
-"MORE_OPTIONS" = "More";
-"APPLY_BUTTON" = "Apply";
-"RESET_SETTINGS" = "Reset settings";
-"CONTACT_SUPPORT" = "Contact &amp; Support";
-"SATINE_LINK" = "Check out Satiné";
+"ENABLED" = "Bekapcsolva";
+"ADD_LOCKSCREEN_BUTTON" = "Gomb hozzáadása a képernyőzárhoz";
+"USE_BUTTON_TINT_COLOR" = "Szín árnyalat hozzáadása a gombhoz";
+"TINT_COLOR" = "Szín árnyalat";
+"UNLOCK_METHOD" = "Feloldási módszer";
+"BUTTON_POSITION" = "Gomb pozíció";
+"LOCKSCREEN_BUTTON" = "Képernyőzár gomb";
+"MAIN_TWEAK_SETTINGS" = "Fő Tweak beállítások";
+"TAP_UNLOCK" = "Koppints";
+"LONG_PRESS_UNLOCK" = "Hosszú nyomás";
+"HAPTIC_FEEDBACK" = "Haptikus visszajelzés";
+"NO_VIBRATION" = "Egyik sem";
+"LOCKSCREEN_OPTIONS" = "Képernyőzár opciók";
+"SKIP_PASSCODE_SCREEN" = "Hagyd ki a respring jelszó képernyőt";
+"PAGE_DOTS" = "Rejtsd el a képernypzár oldalt jelölő pöttyöket";
+"UNLOCK_TEXT" = "Rejtsd el a képernyőzár feloldó szöveget";
+"MORE_OPTIONS" = "Több";
+"APPLY_BUTTON" = "Alkalmaz";
+"RESET_SETTINGS" = "Beállítások alaphelyzetbe állítása";
+"CONTACT_SUPPORT" = "Lépj kapcsolatba &amp; Támogatás";
+"SATINE_LINK" = "Csekkolj rá Satiné";
