--- a/FingerLock/en.lproj/Root.strings
+++ b/FingerLock/en.lproj/Root.strings
@@ -12,7 +12,7 @@
 "NO_VIBRATION" = "Egyik sem";
 "LOCKSCREEN_OPTIONS" = "Képernyőzár opciók";
 "SKIP_PASSCODE_SCREEN" = "Hagyd ki a respring jelszó képernyőt";
-"PAGE_DOTS" = "Rejtsd el a képernypzár oldalt jelölő pöttyöket";
+"PAGE_DOTS" = "Rejtsd el a képernyőzár oldalt jelölő pöttyöket";
 "UNLOCK_TEXT" = "Rejtsd el a képernyőzár feloldó szöveget";
 "MORE_OPTIONS" = "Több";
 "APPLY_BUTTON" = "Alkalmaz";
