--- a/FingerLock/en.lproj/Position.strings
+++ b/FingerLock/en.lproj/Position.strings
@@ -1,2 +1,2 @@
-"BUTTON_Y_AXIS" = "Button Y Axis";
-"BUTTON_X_AXIS" = "Button X Axis";
+"BUTTON_Y_AXIS" = "Gomb Y Tengelye";
+"BUTTON_X_AXIS" = "Gomb X Tengelye";
